Allow menus to abut the left and top edges of the screen.  Bug 176767, patch by Martijn Wargers <martijn.martijn@gmail.com>, r+sr=roc, a=asa